Spacing of images corrected

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -107,7 +107,7 @@ a .fa-solid {
 
 @media (max-width: 1300px) {
   .project-img {
-    margin-top: 50px;
+    margin-top: 30px;
   }
   .project-content {
     padding: 5px 20px;
